# LabelLoop

./: .gitignore  Makefile  README.md  docker-compose.dev.yml
api/: DATABASE_ARCHITECTURE.md  Dockerfile.dev  IMAGE_UPLOAD_WORKFLOW.md  Makefile  pyproject.toml
api/app/: main.py
api/app/api/: deps.py  router.py
api/app/api/endpoints/: __init__.py  datasets.py  health.py  images.py  labels.py
api/app/core/: config.py  database.py  s3.py
api/app/model/: __init__.py  annotation.py  dataset.py  image.py  label.py
api/app/schema/: __init__.py  annotation.py  dataset.py  health.py  image.py  label.py
api/app/services/: __init__.py  dataset_service.py  health_service.py  image_service.py  label_service.py
webapp/: Dockerfile.dev  Makefile  package-lock.json  package.json  tailwind.config.ts
webapp-vuejs/: Dockerfile.dev  Makefile  README.md  package-lock.json  package.json  tailwind.config.js
webapp-vuejs/src/: App.vue
webapp-vuejs/src/assets/: main.css
webapp-vuejs/src/components/: FeatureCard.vue  GradientBackground.vue  GradientCard.vue  LiveChart.vue  Stat.vue  StatusBadge.vue  StepCard.vue  index.ts
webapp-vuejs/src/router/: index.ts
webapp-vuejs/src/stores/: datasets.ts  health.ts  images.ts  index.ts  labels.ts
webapp-vuejs/src/views/: AboutView.vue  DashboardView.vue  DatasetDetailView.vue  DatasetsView.vue  HomeView.vue
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: DatasetCard.tsx  FeatureCard.tsx  GradientBackground.tsx  GradientCard.tsx  LiveChart.tsx  Stat.tsx  StatusBadge.tsx  StepCard.tsx  index.ts
(+12 files in other folders)
